--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,12 @@
 
     RewriteEngine On
 
+     RewriteCond %{HTTP:X-Forwaded-Proto} =http [OR]
+     RewriteCond %{HTTP:X-Forwaded-Proto} =""
+     RewriteCond %{HTTP} ≠ On
+     RewriteRule ^ http://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
